# ddddocr-musl

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README-cn.md  README.md  compose.override.yaml  compose.yaml  release-plz-dynamic.toml  release-plz.toml  update_models.sh
.cargo/: config.toml
.github/workflows/: docker-build.yml  release-manager.yml
model/: .gitignore
onnxruntime/onnxruntime-v1.22.2-x86_64-linux-musl-static/: .gitignore
src/: lib.rs  main.rs
toolchains/x86_64-linux-musl/: .gitignore
