[package]
name = "ddddocr-musl"
version = "0.1.1"
edition = "2021"
# publish = false

[dependencies]
# Inference Engine
# Note: 'alternative-backend' is now controlled via features
ort = { version = "2.0.0-rc.10", default-features = false, features = ["ndarray", "std"] }
ort-tract = { version = "0.1.0", optional = true }
ndarray = "0.17"

# Web Framework
salvo = { version = "0.85.0", features = ["oapi", "anyhow", "server"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image Processing
image = "0.25"
imageproc = "0.25"

# Utils
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
sha256 = "1.6"
lru = "0.16"
bytes = "1.11"
regex = "1"
once_cell = "1.21"

[features]
default = ["onnxruntime"]
tract = ["ort/alternative-backend", "dep:ort-tract"]
# No specific feature needed for onnxruntime static if we just omit 'tract'
# But we can add one for clarity or if we need code-side toggles
onnxruntime = [] 

[profile.release]
lto = true
strip = true
codegen-units = 1
